clean code by ContextApi

--- a/src/components/CategoryList.css
+++ b/src/components/CategoryList.css
@@ -2,3 +2,8 @@
   display: flex;
   justify-content: space-between;
 }
+
+.category-item.selected {
+  background-color: #0f548c;
+  color: white;
+}
